Fixed links on login and register. Fixed overflow on footer. Set up basic tutorial page.

--- a/Infinite Sidescroller/Content/global.css
+++ b/Infinite Sidescroller/Content/global.css
@@ -13,6 +13,12 @@ body {
         url("../img/cracktexture.png") no-repeat center center,
         rgb(60, 0, 0);
     background-size: cover;
+    font-family: 'Cinzel', serif;
+    color: #d4af37;
+}
+
+.text_center {
+    text-align: center;
 }
 
 /*FRONT PAGE*/
@@ -21,8 +27,6 @@ body {
     line-height: 500px;
     font-size: 30pt;
     font-weight: 700;
-    font-family: 'Cinzel', serif;
-    color: #d4af37;
     background: url("../img/garden.jpg") no-repeat center top;
     background-size: cover;
     text-align: center;
@@ -38,8 +42,6 @@ body {
     padding: 50px;
     font-size: 20pt;
     font-weight: 700;
-    font-family: 'Cinzel', serif;
-    color: #d4af37;
 }
 
 .front_page_main h1 {
@@ -56,7 +58,6 @@ body {
     width: 960px;
     margin: 0 auto;
     padding: 10px;
-    font-family: 'Cinzel', serif;
     color: black;
     background-color: #e7e2b6;
     border: 30px solid transparent;
@@ -73,7 +74,7 @@ body {
     width: 100%;
 }
 
-.front_page_news p {
+.front_page_news p, .front_page_news h1, .front_page_news h2 {
     color: rgba(191, 187, 151, 0.8);
     text-shadow: 1px 4px 6px #e7e2b6, 0 0 0 #000, 1px 4px 6px #e7e2b6;
 }
@@ -148,7 +149,6 @@ nav ul li a {
   text-decoration: none;
   display: block;
   padding: 15px 25px;
-  font-family: 'Cinzel', serif;
   font-weight: 400;
   font-size: 19px;
   -webkit-transition: color .25s;
@@ -235,15 +235,12 @@ canvas {
 /*LOGIN & REGISTER PAGE*/
 
 .login_body{
-  font-family:'Cinzel',sans-serif;
 }
 
 .login_elements {
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
-    font-family: 'Cinzel', serif;
-
 }
 
 .login_button{
@@ -258,7 +255,6 @@ canvas {
   font-size:26px;
   text-align:center;
   text-decoration:none;
-  color:#d4af37;
   cursor:pointer;
   transition:background .3s;
   -webkit-transition:background .3s;
@@ -293,7 +289,6 @@ canvas {
   font-size:140%;
   font-weight:300;
   text-align:center;
-  color:#d4af37;
 }
 
 form{
@@ -306,7 +301,6 @@ input[type="text"],input[type="password"]{
   background:rgba(191, 187, 151, 0.8);
   margin-bottom:4%;
   padding:4%;
-  font-family:'Cinzel',sans-serif;
   font-size:95%;
   color:#fff;
 }
@@ -332,12 +326,11 @@ input[type="submit"]{
   background:#222222;
   border:0;
   padding:4%;
-  font-family: 'Cinzel', serif;
   font-size:100%;
-  color: #d4af37;
   cursor:pointer;
   transition:background .3s;
   -webkit-transition:background .3s;
+  color: #d4af37;
 }
 
 input[type="submit"]:hover{
@@ -357,10 +350,10 @@ input[type="submit"]:hover{
   font-size:26px;
   text-align:center;
   text-decoration:none;
-  color:#d4af37;
   cursor:pointer;
   transition:background .3s;
   -webkit-transition:background .3s;
+  color: #d4af37;
 }
 
 .RD_button:hover{
@@ -388,6 +381,7 @@ footer p {
     border-right: 1px solid lightgray;
     top: 30px;
     padding: 10px;
+    font-size: 10pt;
 }
 
 footer p.no_right_border {
